-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.5, 6.2.0 Beta3
-
Windows 10 Pro 21H1, MinGW 8.1.0 64-bit
-
-
13
-
dff02466a0 (qt/qtdeclarative/dev) 3033e99fa8 (qt/qtdeclarative/6.4) 3033e99fa8 (qt/tqtc-qtdeclarative/6.4)
-
Team A Foundation Sprint 56, Team A Foundation Sprint 57, Team A Foundation Sprint 58, Team A Foundation Sprint 59
Steps to reproduce
- Set your PC's Region to France and Time Zone to "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna" (CEST)
- Add this to a Hello World QML project:
Component.onCompleted: { let d = new Date() console.log("Now: " + d) d.setHours(0, 0, 0) console.log("Midnight: " + d) }
MSVC 2019 64-bit results (correct)
qml: Now: Tue Aug 24 15:37:35 2021 GMT+0200
qml: Midnight: Tue Aug 24 00:00:00 2021 GMT+0200
MinGW 8.1.0 64-bit results (wrong)
qml: Now: Tue Aug 24 15:37:41 2021 GMT+0100
qml: Midnight: Tue Aug 24 01:00:00 2021 GMT+0100
- 1st line shows the correct local time but the wrong timezone
- 2nd line does not show midnight (and also shows the wrong timezone)
- is duplicated by
-
QTBUG-102971 Something fishy going on on MinGW with QML Date
-
- Closed
-
- relates to
-
QTBUG-78996 JavaScript getDay() regression on MinGW
-
- Closed
-
-
QTBUG-100014 tst_qqmlqt fails on Android
-
- Closed
-
-
QTBUG-85149 qv4dateobject.cpp uses incorrect daylight savings calculation
-
- Closed
-
For Gerrit Dashboard: QTBUG-95993 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
375905,9 | Broaden condition for use of MS's _localtime64_s() | dev | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
380447,5 | WIP: see if QDateTime is good enough to implement Date's zone data | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
410917,12 | Implement in QLocalTime the offset functions V4 Date needs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
410918,7 | Split qtLocalTime out into a new QLocalTime namespace | dev | qt/qtbase | Status: MERGED | +2 | 0 |
410919,7 | Move remaining time_t code from qdatetime.cpp to QLocalTime | dev | qt/qtbase | Status: MERGED | +2 | 0 |
412168,2 | Simplify QLocalTime::getCurrentStandardUtcOffset() | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
412322,9 | Use qtbase's new (private) QLocalTime for Date's UTC offsets | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
415670,2 | Use qtbase's new (private) QLocalTime for Date's UTC offsets | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |